# rufish

./: Cargo.toml  README.md  llm.md
src/: client.rs  error.rs  lib.rs  types.rs
